--- a/nodemcu/styles/site.css
+++ b/nodemcu/styles/site.css
@@ -287,3 +287,106 @@ a.disabled {
   display: inline-block;
   margin: 100px auto;
 }
+
+.menu-x ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-x ul li {
+  margin-top: 10px;
+  float: left;
+}
+
+.main-navbar .navbar {
+  height: 3.75rem; }
+  .main-navbar .navbar > * {
+    display: flex; }
+  .main-navbar .navbar .nav-link {
+    min-width: 3.75rem; }
+  .main-navbar .navbar .notifications {
+    position: relative; }
+    @media (max-width: 767.98px) {
+      .main-navbar .navbar .notifications {
+        position: static; }
+        .main-navbar .navbar .notifications .dropdown-menu {
+          min-width: 100% !important;
+          border-left: none; } }
+    .main-navbar .navbar .notifications .badge {
+      position: absolute;
+      padding: 0.25rem 0.375rem;
+      font-size: 0.5rem;
+      left: 50%;
+      top: 50%; }
+    .main-navbar .navbar .notifications .dropdown-menu {
+      padding: 0;
+      min-width: 25rem;
+      border-right: 0;
+      left: auto; }
+      @media (max-width: 767.98px) {
+        .main-navbar .navbar .notifications .dropdown-menu {
+          left: 0;
+          right: 0; } }
+      .main-navbar .navbar .notifications .dropdown-menu .dropdown-item {
+        white-space: normal;
+        display: flex;
+        flex-flow: row;
+        padding-top: 0.625rem;
+        padding-bottom: 0.625rem;
+        border-bottom: 1px solid #e1e5eb; }
+        .main-navbar .navbar .notifications .dropdown-menu .dropdown-item:last-child {
+          border-bottom: 0; }
+      .main-navbar .navbar .notifications .dropdown-menu .notification__icon-wrapper {
+        display: flex;
+        padding: 0 5px; }
+      .main-navbar .navbar .notifications .dropdown-menu .notification__icon {
+        background-color: #F5F6F8;
+        box-shadow: 0 0 0 1px white, inset 0 0 3px rgba(0, 0, 0, 0.2);
+        width: 2.1875rem;
+        height: 2.1875rem;
+        line-height: 0;
+        display: block;
+        text-align: center;
+        margin: auto;
+        border-radius: 50%; }
+        .main-navbar .navbar .notifications .dropdown-menu .notification__icon i {
+          color: #818EA3;
+          line-height: 2.0625rem;
+          font-size: 1.0625rem;
+          margin: 0; }
+      .main-navbar .navbar .notifications .dropdown-menu .notification__content {
+        padding: 0 0.625rem; }
+        .main-navbar .navbar .notifications .dropdown-menu .notification__content p {
+          margin: 0;
+          line-height: 1.5;
+          font-size: 0.75rem; }
+      .main-navbar .navbar .notifications .dropdown-menu .notification__category {
+        font-size: 0.5625rem;
+        color: #818EA3;
+        letter-spacing: 0.0938rem;
+        display: inline-block;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+        font-weight: 500; }
+      .main-navbar .navbar .notifications .dropdown-menu .notification__all {
+        display: block;
+        font-weight: 500;
+        font-size: 11px;
+        border-bottom-left-radius: 0.375rem;
+        border-bottom-right-radius: 0.375rem; }
+  .main-navbar .navbar .user-avatar {
+    max-width: 2.5rem; }
+  .main-navbar .navbar .navbar-nav .dropdown-menu {
+    position: absolute;
+    right: 0;
+    width: 100%;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top: none; }
+  .main-navbar .navbar .nav-link-icon i {
+    line-height: 2.5rem; }
+
+.main-content > .main-navbar,
+.main-content .header-navbar {
+  box-shadow: 0 0.125rem 0.625rem rgba(90, 97, 105, 0.12); }
